--- a/views/con-calc.ejs
+++ b/views/con-calc.ejs
@@ -9,7 +9,7 @@
   <!-- content -->
 
   <section class="content">
-    <form action="/calc" method="post">
+    <form action="/tools/calc" method="post">
       <label for="num1">Number 1</label>
       <input type="number" name="num1" id="num1">
       <label for="num2">Number 2</label>
