apt user schema

--- a/views/con-calc.ejs
+++ b/views/con-calc.ejs
@@ -14,9 +14,18 @@
       <input type="number" name="num1" id="num1">
       <label for="num2">Number 2</label>
       <input type="number" name="num2" id="num2">
-      <button type="submit">
+      
+      <input type="date" id="dob" name="dob"
+       value="1999-04-01"
+       min="1945-01-01" max="2024-12-31">
+      
+       <button type="submit">
         Calculate it!
       </button>
+
+      <form action="/tools/calc" method="post">
+      </form>
+
 
 
 
