--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -17,6 +17,6 @@
   <link rel="stylesheet" href="/stylesheets/content-calc.css">
   <!-- Title -->
   <title>
-    <%= title %>
+    <%= title="disgusting" %>
   </title>
 </head>
